--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,31 @@
 <html>
 
 <head>
-<title>Мой Блог</title>
+<title>Мой Блог | Казарян А.С. 221-365</title>
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 
 <body>
 
 <div>
     <h1><a href="/">Блог Студента</a></h1>
-		<h2><a href="/">Казарян А.С.</a></h2>
-		<h2><a href="/">221-365</a></h2>
 </div>
 
-{% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+<div class="content container">
+    <div class="row">
+        <div class="col-md-8">
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        <p>Опубликовано: {{ post.published_date }}</p>
+                    </div>
+                    <h1><a href="">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-{% endfor %}
+</div>
 
 </body>
 
