--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,21 @@
+{% load static %}
 <html>
+    <head>
+        <title>Блог | Казарян А.С. 221-365</title>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    </head>
+    <body>
+        <div>
+            <h1><a href="/">Блог студента</a></h1>
+        </div>
 
-<head>
-<title>Мой Блог | Казарян А.С. 221-365</title>
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-</head>
-
-<body>
-
-<div>
-    <h1><a href="/">Блог Студента</a></h1>
-</div>
-
-<div class="content container">
+        <div class="content container">
     <div class="row">
         <div class="col-md-8">
             {% for post in posts %}
                 <div class="post">
                     <div class="date">
-                        <p>Опубликовано: {{ post.published_date }}</p>
+                        <p>Дата публикации: {{ post.published_date }}</p>
                     </div>
                     <h1><a href="">{{ post.title }}</a></h1>
                     <p>{{ post.text|linebreaksbr }}</p>
@@ -26,7 +24,5 @@
         </div>
     </div>
 </div>
-
-</body>
-
+    </body>
 </html>
