--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,7 @@
+
+
 .page-header {
-    background-color: #ff9400;
+    background-color: #428bca;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -10,6 +12,11 @@
     text-decoration: none;
 }
 
+.post {
+	   border: solid 2px #428bca;
+    padding: 15px;
+    border-radius: 10px;
+}
 .content {
     margin-left: 40px;
 }
@@ -19,7 +26,7 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #828282;
+    color: #000000;
 }
 
 .save {
